@@ -1,5 +1,9 @@
 2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>
 
+	* PixelExactDrawing-test: Add a new test case.
+
+2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>
+
 	* PixelExactDrawing-test: Add a new test
 
 2011-04-30  Eric Wasylishen  <ewasylishen@gmail.com>
